$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

11/5/13
    - Fixed a bug in MIPS where a near-singular matrix could produce
      an extremely large Newton step, resulting in incorrectly satisfying
      the relative feasibility criterion for successful termination.

10/11/13
    - Removed support for Matlab 6.x. Removed 'anon_fcns' option from
      have_fcn(). Files removed:
        fmincopf6_solver.m
        mips6.m
        mips6opf_solver.m
        qps_mips6.m
        t_mips6.m
    - Removed support for constr and successive LP-based OPF solvers.
      Removed 'constr', 'lp', 'qp' options from have_fcn(). Files removed:
        copf_solver.m
        fun_copf.m
        grad_copf.m
        LPconstr.m
        LPeqslvr.m
        lpopf_solver.m
        LPrelax.m
        LPsetup.m
        mp_lp.m
        mp_qp.m
        t/t_opf_constr.m
        t/t_opf_lp_den.m
        t/t_opf_lp_spf.m
        t/t_opf_lp_spr.m

9/20/13
    - Added continuation power flow, runcpf(), with tangent
      predictor and Newton method corrector, based on code
      contributed by Shrirang Abhyankar and Alex Flueck.

9/5/13
    - Fix in smartmkt() to avoid crash following non-convergent
      uopf when mkt.lim.P.max_offer is not defined.

9/3/13
    - Fixed bug (typo) in auction() that could affect cases with
      a lower limit on the cleared bid price.

7/30/13
    - Extended modcost() to optionally accept a vector of shift/scale
      factors, instead of just a scalar.

6/7/13
    - Made non-convergent results more obvious by not printing
      the standard output tables (can be overridden with new
      OUT_FORCE option) and making the "did not converge"
      more prominent.

5/1/13
    - Changed behavior of branch angle difference limits so that
      0 is interpreted as unbounded only if both ANGMIN and ANGMAX