@@ -183,7 +183,11 @@ switch alg
         lb = xmin; ub = xmax;
         lb(xmin == -Inf) = -1e10;   %% replace Inf with numerical proxies
         ub(xmax ==  Inf) =  1e10;
-        x0 = (lb + ub) / 2;
+        x0 = (lb + ub) / 2;         %% set x0 mid-way between bounds
+        k = find(xmin == -Inf & xmax < Inf);    %% if only bounded above
+        x0(k) = xmax(k) - 1;                    %% set just below upper bound
+        k = find(xmin > -Inf & xmax == Inf);    %% if only bounded below
+        x0(k) = xmin(k) + 1;                    %% set just above lower bound
         x0(vv.i1.Va:vv.iN.Va) = Varefs(1);  %% angles set to first reference angle
         if ny > 0
             ipwl = find(gencost(:, MODEL) == PW_LINEAR);
